--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,17 @@ a {
     color: #888888;
 }
 
-#links {
+.links {
     text-align: center;
+    line-height: 25px;
+}
+
+.index_links {
+    text-align: justify;
+    margin: 0 auto;
+    width: 3.5em;
+}
+
+.pre_links_padding {
+    margin-bottom: 30px;
 }
